--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>MusicZone</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+</head>
 
-  <body>
+<body>
+    <% if flash[:notice] %>
+    <div>
+        <p class="notice text-center text-success">
+            <%= notice %>
+        </p>
+    </div>
+    <% end %>
+    <% if flash[:alert] %>
+    <div>
+        <p class="alert text-center text-danger">
+            <%= alert %>
+        </p>
+    </div>
     <%= yield %>
-  </body>
+</body>
+
 </html>
