--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -25,7 +25,8 @@
               <% if opinion.Author[:Photo].nil? %>
                 <%= gravatar_for opinion.Author, size: 50 %>
               <% else %>
-                <%= image_tag opinion.Author.Photo.thumb.url %>
+               
+                <%= cl_image_path("opinion.Author.Photo.thumb.url ", :cloud_name => 'djbskjkn3')%>
               <% end %>
             </div>
           </div>
