--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,59 +1,66 @@
-<div class="login-cover text-center">
-  <div class="twitter-logo">
-      <i class="fab fa-twitter fa-3x"></i>
-  </div>
-  <h3>Sign Up to Twitter</h3>
+<div class="mt-5 text-center">
+    <div class="twitter-logo">
+        <i class="fab fa-twitter fa-3x"></i>
+    </div>
+    <h3 class="mb-5">Sign Up to Twitter</h3>
 </div>
 <% if @user.errors.any? %>
-    <div class="row">
-      <div class="col-xs-8 col-xs-offset-2">
+<div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
         <div class="panel panel-danger">
-          <div class="panel-heading">
-            <h3><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
-            <div class="panel-body">
-              <ul>
-                <% @user.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-              </ul>
+            <div class="panel-heading">
+                <h3>
+                    <%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
+                <div class="panel-body">
+                    <ul>
+                        <% @user.errors.full_messages.each do |message| %>
+                        <li>
+                            <%= message %>
+                        </li>
+                        <% end %>
+                    </ul>
+                </div>
             </div>
-          </div>
-        </div>      
-      </div>
+        </div>
     </div>
+</div>
 <% end %>
 
-<%= form_for (@user), :url => users_path, :html => {class: "text-center login-form"} do |f| %>
-  <div class="form-label">
-    <%= f.label :Username, class: "username-label" %>
-  </div>
-  <div class="form-input">
-    <%= f.text_field :Username, class: "username-input", placeholder: "Enter Username" %>
-  </div>
-
-  <div class="form-label">
-    <%= f.label :Fullname, class: "Fullname-label" %>
-  </div>
-  <div class="form-input">
-    <%= f.text_field :Fullname, class: "Fullname-input", placeholder: "Enter Fullname" %>
-  </div>
-
-  <div class="form-label">
-    <%= f.label :Photo, class: "Photo-label" %>
-  </div>
-  <div class="form-input">
-    <%= f.file_field :Photo, class: "Photo-input text-center" %>
-  </div>
-
-  <div class="form-label">
-    <%= f.label :CoverImage, class: "cover-image-label" %>
-  </div>
-  <div class="form-input">
-    <%= f.file_field :CoverImage, class: "cover-image-input text-center" %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.submit "Sign Up",  class: "btn btn-primary signup-btn"%>    
-  </div>
-  <%= link_to "Login in to Twitter", login_path %>
-<% end %>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-10 col-xl-9 mx-auto">
+            <div class="card card-signin flex-row my-5">
+                <div class="card-img-left d-none d-md-flex">
+                    <!-- Background image for card set in CSS! -->
+                </div>
+                <div class="card-body bg">
+                    <h5 class="card-title text-center">Register</h5>
+                    <%= form_for (@user), :url => users_path, :html => {class: "form-signin"} do |f| %>
+                    <div class="form-group">
+                        <%= f.text_field :Username, class: "form-control", placeholder: "Enter Username" %>
+                    </div>
+                    <div class="form-input">
+                        <%= f.text_field :Fullname, class: "form-control", placeholder: "Enter Fullname" %>
+                    </div>
+                    <div class="form-label-group">
+                        <%= f.label :Photo, class: "form-control" %>
+                    </div>
+                    <div class="form-label-group">
+                        <%= f.file_field :Photo, class: "form-control" %>
+                    </div>
+                    <div class="form-label-group">
+                        <%= f.label :CoverImage, class: "form-control" %>
+                    </div>
+                    <div class="form-label-group">
+                        <%= f.file_field :CoverImage, class: "form-control" %>
+                    </div>
+                    <div class="form-label-group">
+                        <%= f.submit "sign up",  class: "btn btn-lg btn-primary btn-block text-uppercase"%>
+                    </div>
+                    <%= link_to "Login in to Twitter", login_path %>
+                    <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
