--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,7 @@
 </head>
 
 <body>
-    <% if flash[:notice] %>
-    <div>
-        <p class="notice text-center text-success">
-            <%= notice %>
-        </p>
-    </div>
-    <% end %>
-    <% if flash[:alert] %>
-    <div>
-        <p class="alert text-center text-danger">
-            <%= alert %>
-        </p>
-    </div>
-    <% end -%>
+<%=render 'layouts/message' %>
     <%= yield %>
 </body>
 </html>
