--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
+<%=render 'layouts/message' %>
 <div class="mt-5 text-center">
     <div class="twitter-logo">
-        <i class="fab fa-twitter fa-3x"></i>
+        <i class="fas fa-guitar fa-3x shadow p-3 mb-2"></i>
     </div>
-    <h3 class="mb-5">Sign Up to Twitter</h3>
+    <h3 class="mb-5">Sign Up  For Music Tweets</h3>
 </div>
 <% if @user.errors.any? %>
 <div class="row">
