--- a/app/views/opinions/_navigation_bar.html.erb
+++ b/app/views/opinions/_navigation_bar.html.erb
@@ -1,9 +1,19 @@
  <nav class="nav-bar">
-  <i class="fab fa-twitter fa-lg" id="logo"></i>
+ 	<%= link_to icon('guitar', id: 'my-icon', class: "fa-2x text-white mt-1 ml-2"), root_path %>
+
   <ul>
-    <li><i class="fas fa-pen"></i></li>
-    <li><i class="fas fa-envelope-square"></i></li>
-    <li><i class="fas fa-search"></i></li>
-    <li><i class="fas fa-cog"></i></li>
+    <li>
+      <%= link_to icon('pen', id: 'my-icon'), class: "fa-2x text-white mb-4" %>
+    </li>
+    <li>
+    	<%= link_to icon('envelope', id: 'my-icon'), class: "fa-2x text-white mt-1 ml-2" %>
+    </li>
+    <li>
+       <%= link_to icon('search', id: 'my-icon'), class: "fa-2x text-white mb-2" %>
+    </li>
+    <li>
+    	<%= link_to icon('cog', id: 'my-icon') %>
+    </li>
   </ul>
 </nav>
+<%=render 'layouts/message' %>
