--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
     <div class="user-tweet">
       <div class="hero-img">
         <% unless @user[:CoverImage].nil? %>
-          <%= image_tag @user.CoverImage.standard.url, class: 'photo-hero' %>
+          <%= image_tag @user.CoverImage.standard.url, class: 'photo-hero shadow-lg p-3' %>
         <% else %>
           <img src="https://via.placeholder.com/150" alt="">
         <% end %>
@@ -14,31 +14,27 @@
       <div class="user-body">
         <p class="user-body-header">ALL TWEETS</p>
         <% @opinions.each do |opinion| %>
-          <div class="user-avatar">
+          <div class="user-avatar shadow-lg">
             <div class="picture">
-              <% if opinion.Author[:Photo].nil? %>
-                <%= gravatar_for opinion.Author, size: 50 %>
-              <% else %>
-                <%= image_tag opinion.Author.Photo.thumb.url %>
-              <% end %>           
+            <%= render_author_pic(user) %>         
             </div>
           </div>
           <div class="user-content">
             <h4><%= opinion.Author.Fullname.upcase %></h4>
             <span><%= opinion.Text %></span>
             <span class="like">
-            <% if opinion.likes.any? { |like| like.UserId == current_user.id }%>
-              <%= link_to unlike_path(opinion), method: :delete, class: 'user' do %>
-                <i class="fas fa-heart text-danger"></i>
-              <% end %>
-            <% else %>
-              <%= link_to like_path(opinion), class: 'user' do %>
-                <i class="fas fa-heart text-white"></i>
-              <% end %>
-            <% end %>
-            <% if opinion.likes.any? %>
-              <p><%= "#{pluralize(opinion.likes.size, 'like')}" %></p>
-            <% end %>
+           <% if opinion.likes.any? { |like| like.UserId == current_user.id }%>
+                  <%= link_to unlike_path(opinion), method: :delete, class: 'user-1' do %>
+                  <%= link_to icon(' fa-heart', id: 'my-icon'), class: "fa-2x text-white mb-4" %>
+                  <% end %>
+                <% else %>
+                  <%= link_to like_path(opinion), class: 'user-2' do %>
+                    <i class="fas fa-heart text-white"></i>
+                  <% end %>
+                <% end %>
+                <% if opinion.likes.any? %>
+                  <p><%= "#{pluralize(opinion.likes.size, 'like')}" %></p>
+                <% end %>
         </span>
             <div class="clear"></div>
           </div>
@@ -47,26 +43,26 @@
     </div>
     <div  class="user-profile">
      <div class="profile-container">
-        <div class="follow-icon">
+        <div class="d-flex justify-content-center mt-5">
           <% unless current_user.id == @user.id %>
               <% if current_user.followed.any? { |person| person.followedId == @user.id }%>
                 <%= link_to unfollow_path(@user), method: :delete, class: "font-unfollow-icon" do %>
-                  <i class="fas fa-minus-circle fa-2x"></i>
+                  <i class="fas fa-minus-circle "></i>
                 <% end %>
               <%else%>
                 <%= link_to follow_path(@user), class: "font-follow-icon" do %>
-                  <i class="fas fa-plus-circle fa-2x"></i>
+                  <i class="fas fa-plus-circle "></i>
                 <% end %>
               <% end %>
           <% end %>
-          <div class="picture">
+          <div class="picture ">
             <% unless @user[:Photo].nil? %>
-              <%= image_tag @user.Photo.medium.url %>
+              <%= image_tag @user.Photo.medium.url , class: "rounded-circle ml-3 mr-3" %>
             <% else %>
               <%= gravatar_for @user, size: 100 %>
             <% end %>
           </div>
-          <i class="fas fa-list fa-lg text-primary pt-2"></i>
+          <i class="fas fa-list text-primary pt-2"></i>
         </div>
         <div class="profile-details text-center">
           <h5><%= @user.Fullname.upcase %></h5>
@@ -110,11 +106,11 @@
                 </div>
                 <% if current_user.followed.any? { |person| person.followedId == follower.Follower.id }%>
                   <%= link_to unfollow_path(follower.Follower), method: :delete, class: "follow-icons" do %>
-                      <i class="fas fa-minus-circle fa-2x"></i>
+                      <i class="fas fa-minus-circle "></i>
                   <% end %>
                 <%else%>
                   <%= link_to follow_path(follower.Follower), class: "follow-icons" do %>
-                    <i class="fas fa-plus-circle fa-2x"></i>
+                    <i class="fas fa-plus-circle "></i>
                   <% end %>
                 <% end %>
               </div>
