--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ li {
 .hero-img {
   display: block;
   width: 100%;
-  height: 35vh;
+  height: 40vh;
   overflow: hidden;
 }
 
@@ -281,7 +281,7 @@ aside {
     font-weight: 500;
   }
 
-   .who-follow-profile {
+   .who-follow-profile{
     margin-bottom: 1rem;
   }
 
@@ -296,6 +296,7 @@ aside {
   .who-follow-profile h6 {
     padding-left: 1rem;
     font-size: 12px;
+    color: #657786;
   }
 }
 h5 {
