--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -43,17 +43,17 @@
                     <div class="form-input">
                         <%= f.text_field :Fullname, class: "form-control", placeholder: "Enter Fullname" %>
                     </div>
-                    <div class="form-label-group">
-                        <%= f.label :Photo, class: "form-control" %>
+                    <div class="form-label mt-2">
+                        <%= f.label :Photo %>
                     </div>
                     <div class="form-label-group">
-                        <%= f.file_field :Photo, class: "form-control" %>
+                        <%= f.file_field :Photo, class: "form-control shadow" %>
+                    </div>
+                    <div class="form-label mt-2">
+                        <%= f.label :CoverImage%>
                     </div>
                     <div class="form-label-group">
-                        <%= f.label :CoverImage, class: "form-control" %>
-                    </div>
-                    <div class="form-label-group">
-                        <%= f.file_field :CoverImage, class: "form-control" %>
+                        <%= f.file_field :CoverImage, class: "form-control shadow", placeholder: "choose a photo" %>
                     </div>
                     <div class="form-label-group">
                         <%= f.submit "sign up",  class: "btn btn-lg btn-primary btn-block text-uppercase"%>
