--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,10 +2,9 @@
 @import "font-awesome";
 @import "bootstrap";
 
-
 $primary-color-dark: #213246;
-$primary-color: #50A4E2;
-$main-background: #F5F6F8;
+$primary-color: #50a4e2;
+$main-background: #f5f6f8;
 
 * {
   margin: 0;
@@ -13,7 +12,7 @@ $main-background: #F5F6F8;
 }
 
 body {
-  background: #F5F8FA;
+  background: #f5f8fa;
   position: relative;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -30,21 +29,19 @@ li {
   overflow: hidden;
 }
 
-
-
 .hero-img img {
   display: block;
   width: 100%;
   height: 35rem;
-  
 }
-
 
 .login-cover {
   margin-top: 2%;
+
   i {
     color: $primary-color;
   }
+
   h3 {
     font-weight: bolder;
   }
@@ -54,8 +51,6 @@ li {
   padding-top: 1rem;
 }
 
-
-
 // main content
 .main-content {
   display: grid;
@@ -64,224 +59,47 @@ li {
   height: 100vh;
 }
 
-.side-nav {
-  background-color: $primary-color-dark;
-  height: 160vh;
-  font-size: 13px;
- text-decoration: none;
-
-.current-user {
-  display: flex;
-  padding: 1rem 0 2rem 1.5rem;
-   font-size: 13px;
-   font-weight: bold;
-  }
-
-  .current-user img {
-   margin: 1rem 0 1rem 2rem;
-  }
-
-  .current-user h6 {
-   padding: 1.5rem 0 0 1rem;
-   color: #AAB8C2;
-   font-size: 14px;
-     font-weight: bold;
-  }
- h6{
-  color: #AAB8C2;
- }
-  .follow {
-    display: flex;
-    border: 2px solid #16272F;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1rem;
-    font-size: 14px;
-     font-weight: bold;
-  }
-
-  .stats-1 {
-    padding-right: 2rem;
-    border-right: 2px solid #16272F;
-    height: 45px;
-  }
-
-  .stats-2 {
-    padding-left: 2rem;
-  }
-
-  .stat-name {
-    color: #667B90;
-  }
-
-  .stat-no {
-    padding-left: 1rem;
-    margin-bottom: -0.4rem;
-    color:white;
-
-  }
-
-  .side-links {
-    padding: 1rem 0 0;
-    width: 100%;
-    color: black;
-  }
-
-  .links {
-    padding: 1rem 0 1rem 2.5rem;
-    color: #667B90;
-    font-size:13px;
-    text-decoration: none;
-  }
-
-  .links i {
-    padding-right: 1rem;
-  }
-
-  .active,
-  .links:hover {
-    color: white;
-    background-color: $primary-color;
-    text-decoration: none;
-  }
-  
-  .links-path:hover {
-    color: white;
-    background-color: $primary-color;
-    text-decoration: none;
-  }
-}
-
-main {
-  background-color: $main-background;
-}
-
-#logo {
-  color: white;
-  padding: 1.5rem 3.5rem 1rem 1.5rem;
-}
-
 .nav-bar {
   display: flex;
   justify-content: space-between;
   background-color: $primary-color;
   height: 3rem;
-  position:sticky;
+  position: sticky;
   top: 0;
 
   ul {
     display: flex;
     padding-right: 1rem;
   }
+
   li {
     padding: 20px;
     align-items: center;
-
   }
+
   i {
-    color: #63758B;
+    color: #63758b;
   }
 }
 
-.like {
-  display: flex;
-}
-
-.like p {
-  padding: 0rem 0 0 0.5rem;
-}
-
-.text-white {
-  color: grey;
-}
-
-.main-body {
-  padding-left: 1rem;
-  display: grid;
-  grid-template-columns: 75% 25%;
-  grid-gap: 0;
-  height: 100vh;
-
-  .tweets-heading {
-    padding: 1rem 0 1.5rem 0;
-    border-bottom: 2px solid #E7EBEE;
-    color: #AAB8C2;
-    font-size: 13px;
-    font-weight:500;
-  }
-  .tweet-form {
-    background-color: white;
-    border-radius: 0.5rem;
-    width: 98%;
-    padding: 1rem;
-    font-size: 13px;
-    font-weight:500;
-    color: #657786;
-  }
-
-  .text-input {
-    width: 100%;
-    padding-left: 0.5rem;
-  }
-
-  .text-btn {
-    padding: 1rem;
-    color: white;
-    background-color: $primary-color;
-    border-radius:5px;
-    border: none;
-  }
-
-  .tweet-body {
-    margin: 2rem 0;
-    background-color: white;
-    border-radius: 0.5rem;
-    width: 98%;
-    padding: 1rem;
-    font-size: 12px;
-    color: #657786;
-  }
-
-  .tweet-body-header {
-    border-bottom: 2px solid #E7EBEE;
-    padding: 1rem 0 1.5rem 0;
-  }
-
-  .tweet-avatar {
-    float: left;
-    margin:0 1rem 2rem 0;
-
-  }
-
-  .tweet-content p {
-    font-size: 15px;
-  }
-
-   .tweet-content h4 {
-    font-size: 0.8rem;
-    margin-bottom: -0.2rem;
-  }
-
- .clear {
-   clear: both;
- }
+h6 {
+  color: #aab8c2;
 }
 
 aside {
-  border-left: 2px solid #E7EBEE;
+  border-left: 2px solid #e7ebee;
   padding-left: 1rem;
 
   .follow-header {
     padding: 1rem 0 0.5rem 0;
-    border-bottom: 2px solid #E7EBEE;
+    border-bottom: 2px solid #e7ebee;
     margin-bottom: 1rem;
     font-size: 13px;
     color: #657786;
     font-weight: 500;
   }
 
-   .who-follow-profile{
+  .who-follow-profile {
     margin-bottom: 1rem;
   }
 
@@ -299,9 +117,190 @@ aside {
     color: #657786;
   }
 }
-h5 {
-    font-size:  12px;
+
+.side-nav {
+  background-color: $primary-color-dark;
+  height: 160vh;
+  font-size: 13px;
+  text-decoration: none;
+
+  .current-user {
+    display: flex;
+    padding: 1rem 0 2rem 1.5rem;
+    font-size: 13px;
+    font-weight: bold;
+  }
+
+  .current-user img {
+    margin: 1rem 0 1rem 2rem;
+  }
+
+  .current-user h6 {
+    padding: 1.5rem 0 0 1rem;
+    color: #aab8c2;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .follow {
+    display: flex;
+    border: 2px solid #16272f;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .stats-1 {
+    padding-right: 2rem;
+    border-right: 2px solid #16272f;
+    height: 45px;
+  }
+
+  .stats-2 {
+    padding-left: 2rem;
+  }
+
+  .stat-name {
+    color: #667b90;
+  }
+
+  .stat-no {
+    padding-left: 1rem;
+    margin-bottom: -0.4rem;
+    color: white;
+  }
+
+  .side-links {
+    padding: 1rem 0 0;
+    width: 100%;
+    color: black;
+  }
+
+  .links {
+    padding: 1rem 0 1rem 2.5rem;
+    color: #667b90;
+    font-size: 13px;
+    text-decoration: none;
+  }
+
+  .links i {
+    padding-right: 1rem;
+  }
+
+  .active,
+  .links:hover {
+    color: white;
+    background-color: $primary-color;
+    text-decoration: none;
+  }
+
+  .links-path:hover {
+    color: white;
+    background-color: $primary-color;
+    text-decoration: none;
+  }
 }
+
+main {
+  background-color: $main-background;
+}
+
+#logo {
+  color: white;
+  padding: 1.5rem 3.5rem 1rem 1.5rem;
+}
+
+.like {
+  display: flex;
+}
+
+.like p {
+  padding: 0 0 0 0.5rem;
+}
+
+.text-white {
+  color: grey;
+}
+
+.main-body {
+  padding-left: 1rem;
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-gap: 0;
+  height: 100vh;
+
+  .tweets-heading {
+    padding: 1rem 0 1.5rem 0;
+    border-bottom: 2px solid #e7ebee;
+    color: #aab8c2;
+    font-size: 13px;
+    font-weight: 500;
+  }
+
+  .tweet-form {
+    background-color: white;
+    border-radius: 0.5rem;
+    width: 98%;
+    padding: 1rem;
+    font-size: 13px;
+    font-weight: 500;
+    color: #657786;
+  }
+
+  .text-input {
+    width: 100%;
+    padding-left: 0.5rem;
+  }
+
+  .text-btn {
+    padding: 1rem;
+    color: white;
+    background-color: $primary-color;
+    border-radius: 5px;
+    border: none;
+  }
+
+  .tweet-body {
+    margin: 2rem 0;
+    background-color: white;
+    border-radius: 0.5rem;
+    width: 98%;
+    padding: 1rem;
+    font-size: 12px;
+    color: #657786;
+  }
+
+  .tweet-body-header {
+    border-bottom: 2px solid #e7ebee;
+    padding: 1rem 0 1.5rem 0;
+  }
+
+  .tweet-avatar {
+    float: left;
+    margin: 0 1rem 2rem 0;
+  }
+
+  .tweet-content p {
+    font-size: 15px;
+  }
+
+  .tweet-content h4 {
+    font-size: 0.8rem;
+    margin-bottom: -0.2rem;
+  }
+
+  .clear {
+    clear: both;
+  }
+}
+
+h5 {
+  font-size: 12px;
+}
+
 .main-user-body {
   display: grid;
   grid-template-columns: 75% 25%;
@@ -317,16 +316,16 @@ h5 {
   }
 
   .user-body-header {
-    border-bottom: 2px solid #E7EBEE;
+    border-bottom: 2px solid #e7ebee;
     padding: 1rem 0 1.5rem 0;
     font-size: 12px;
-    color: #AAB8C2;
-    font-weight:500;
+    color: #aab8c2;
+    font-weight: 500;
   }
 
   .user-avatar {
     float: left;
-    margin:0 1rem 2rem 0;
+    margin: 0 1rem 2rem 0;
   }
 
   .user-content span {
@@ -334,19 +333,19 @@ h5 {
     color: #657786;
   }
 
-   .user-content h4 {
+  .user-content h4 {
     font-size: 0.9rem;
     margin-bottom: -0.1rem;
     color: #657786;
   }
 
- .clear {
-   clear: both;
- }
+  .clear {
+    clear: both;
+  }
 }
 
 .user-profile {
-  border-left: 2px solid #E7EBEE;
+  border-left: 2px solid #e7ebee;
 
   .follow-icon {
     // text-align: center;
@@ -368,17 +367,17 @@ h5 {
     align-items: center;
     justify-content: center;
     margin-top: 3rem;
-    border-top: 1px solid #E2E3E5;
-    border-bottom: 1px solid #E2E3E5;
+    border-top: 1px solid #e2e3e5;
+    border-bottom: 1px solid #e2e3e5;
   }
 
   .following-stat {
     padding: 0 1rem;
-    border-right: 1px solid #E2E3E5;
-    border-left: 1px solid #E2E3E5;
+    border-right: 1px solid #e2e3e5;
+    border-left: 1px solid #e2e3e5;
   }
 
-  .opinion-stat{
+  .opinion-stat {
     padding-right: 1rem;
   }
 
@@ -404,7 +403,7 @@ h5 {
 
   .followers-header {
     padding-top: 1rem;
-    border-bottom: 1px solid #E2E3E5;
+    border-bottom: 1px solid #e2e3e5;
     font-size: 12px;
     font-weight: 500;
     color: #657786;
@@ -414,7 +413,6 @@ h5 {
     margin-top: 1rem;
     display: flex;
     justify-content: space-between;
-
   }
 
   .follower-avatar {
@@ -429,26 +427,23 @@ h5 {
   .follow-icons {
     margin-right: 1rem;
   }
-  
- }
-
-
- :root {
-  --input-padding-x: 1.5rem;
-  --input-padding-y: .75rem;
 }
 
-.bg{
-  
-background:
+:root {
+  --input-padding-x: 1.5rem;
+  --input-padding-y: 0.75rem;
+}
+
+.bg {
+  background:
     radial-gradient(black 3px, transparent 4px),
     radial-gradient(black 3px, transparent 4px),
     linear-gradient(#fff 4px, transparent 0),
     linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
     linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
     #fff;
-    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
-    background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
+  background-position: 54px 55px, 0 0, 0 0, 0 0, 0 0;
 }
 
 .card-signin {
@@ -466,6 +461,7 @@ background:
 
 .card-signin .card-img-left {
   width: 45%;
+
   /* Link to your background image using in the property below! */
   background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
   background-size: cover;
@@ -482,10 +478,31 @@ background:
 .form-signin .btn {
   font-size: 80%;
   border-radius: 5rem;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   font-weight: bold;
   padding: 1rem;
   transition: all 0.2s;
+}
+
+.form-label-group > label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+
+  /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  transition: all 0.1s ease-in-out;
+}
+
+.form-label-group > input,
+.form-label-group > label {
+  padding: var(--input-padding-y) var(--input-padding-x);
 }
 
 .form-label-group {
@@ -498,42 +515,6 @@ background:
   border-radius: 2rem;
 }
 
-.form-label-group>input,
-.form-label-group>label {
-  padding: var(--input-padding-y) var(--input-padding-x);
-}
-
-.form-label-group>label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  margin-bottom: 0;
-  /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #495057;
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  transition: all .1s ease-in-out;
-}
-
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-moz-placeholder {
-  color: transparent;
-}
-
 .form-label-group input::placeholder {
   color: transparent;
 }
@@ -543,7 +524,7 @@ background:
   padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
-.form-label-group input:not(:placeholder-shown)~label {
+.form-label-group input:not(:placeholder-shown) ~ label {
   padding-top: calc(var(--input-padding-y) / 3);
   padding-bottom: calc(var(--input-padding-y) / 3);
   font-size: 12px;
