--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -101,19 +101,19 @@
             <% @followers.each do |follower| %>
               <div class="follower-profile">
                 <div class="follower-avatar">
-                  <% unless follower.Follower[:Photo].nil? %>
-                    <%= image_tag follower.Follower.Photo.thumb.url %>
+                  <% unless follower.follower[:Photo].nil? %>
+                    <%= image_tag follower.follower.Photo.thumb.url %>
                   <% else %>
-                    <%= gravatar_for follower.Follower, size: 50 %>
+                    <%= gravatar_for follower.follower, size: 50 %>
                   <% end %>
-                  <h6><%= follower.Follower.Fullname %></h6>
+                  <h6><%= follower.follower.Fullname %></h6>
                 </div>
-                <% if current_user.followed.any? { |person| person.followedId == follower.Follower.id }%>
-                  <%= link_to unfollow_path(follower.Follower), method: :delete, class: "follow-icons" do %>
+                <% if current_user.followed.any? { |person| person.followedId == follower.follower.id }%>
+                  <%= link_to unfollow_path(follower.follower), method: :delete, class: "follow-icons" do %>
                       <i class="fas fa-minus-circle "></i>
                   <% end %>
                 <%else%>
-                  <%= link_to follow_path(follower.Follower), class: "follow-icons" do %>
+                  <%= link_to follow_path(follower.follower), class: "follow-icons" do %>
                     <i class="fas fa-plus-circle "></i>
                   <% end %>
                 <% end %>
