--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -7,45 +7,12 @@
       <p class="tweets-heading">TWEETS</p>
       <div class="tweet-form">
         <p>TWEET SOMETHING</p>
-        
-        <%= form_for @opinion, url: new_opinion_path, remote: true do |f| %>
-          <%= f.text_area :Text, class: "form-control", placeholder: "Compose new tweet" %>
-          <%= f.submit "Tweet", class: "btn-primary btn-sm mt-2" %>
-        <% end %>
+        <%= render 'form'%>
         <%= render 'checks'%>
       </div>
       <div class="tweet-body">
         <p class="tweet-body-header text-primary"><%= pluralize(@opinions.count, 'NEW TWEET' )%></p>
-        <% @opinions.each do |opinion| %>
-          <div class="tweet-avatar">
-            <div class="picture">
-              <% if opinion.Author[:Photo].nil? %>
-                <%= gravatar_for opinion.Author, size: 50 %>
-              <% else %>
-                <%= image_tag opinion.Author.Photo.thumb.url %>
-              <% end %>
-            </div>
-          </div>
-          <div class="tweet-content">
-            <h4><%= opinion.Author.Fullname.upcase %></h4>
-            <p><%= sanitize opinion.Text %></p>
-              <span class="like">
-                <% if opinion.likes.any? { |like| like.UserId == current_user.id }%>
-                  <%= link_to unlike_path(opinion), method: :delete, class: 'user-1' do %>
-                    <i class="fas fa-heart text-danger"></i>
-                  <% end %>
-                <% else %>
-                  <%= link_to like_path(opinion), class: 'user-2' do %>
-                    <i class="fas fa-heart "></i>
-                  <% end %>
-                <% end %>
-                <% if opinion.likes.any? %>
-                  <p><%= "#{pluralize(opinion.likes.size, 'like')}" %></p>
-                <% end %>
-            </span>
-          </div>
-          <div class="clear"></div>
-        <% end %>
+         <%= render 'opinions'%>
       </div>
     </div>
     <aside class="who-follow">
@@ -53,20 +20,7 @@
         <p>WHO TO FOLLOW</p>
       </div>
       <div class="find-friends">
-        <% @users.each do |user| %>
-          <div class="who-follow-profile">
-            <div class="picture">
-              <%= link_to user_path(user), class: 'user' do %>
-                <% unless user[:Photo].nil? %>
-                  <%= image_tag user.Photo.thumb.url, class: 'photo' %>
-                <% else %>
-                  <%= gravatar_for user, size: 50 %>
-                <% end %>
-                <h6><%= user.Fullname %></h6>
-              <% end %>
-            </div>  
-          </div>
-        <% end %>
+       <%= render 'find_friends'%>
       </div>
     </aside>
   </div> 
