fix stylelint issue

--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,3 +1,8 @@
+<head>
+<%= stylesheet_link_tag 'followings' %>
+<%= stylesheet_link_tag 'opinions' %>
+<head>
+
 <div class="main-content">
  <%= render 'side_nav' %>
  <main>
