--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,7 @@
+<head>
+<%= stylesheet_link_tag 'users' %>
+<head>
+
 <div class="mt-5 text-center">
     <div class="twitter-logo">
         <i class="fas fa-guitar fa-3x shadow p-3 mb-2"></i>
