--- a/app/assets/stylesheets/opinions.scss
+++ b/app/assets/stylesheets/opinions.scss
@@ -1,3 +1,43 @@
-// Place all the styles related to the opinions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-user-body {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-gap: 0;
+  height: 100vh;
+
+  .user-body {
+    margin: 2rem 0 0 2rem;
+    background-color: white;
+    border-radius: 0.5rem;
+    width: 95%;
+    padding: 1rem;
+  }
+
+  .user-body-header {
+    border-bottom: 2px solid #e7ebee;
+    padding: 1rem 0 1.5rem 0;
+    font-size: 12px;
+    color: #aab8c2;
+    font-weight: 500;
+  }
+
+  .user-avatar {
+    float: left;
+    margin: 0 1rem 2rem 0;
+  }
+
+  .user-content span {
+    font-size: 0.7rem;
+    color: #657786;
+  }
+
+  .user-content h4 {
+    font-size: 0.9rem;
+    margin-bottom: -0.1rem;
+    color: #657786;
+  }
+
+  .clear {
+    clear: both;
+  }
+}
