fix broken link

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
-
+<head>
+<%= stylesheet_link_tag 'followings' %>
+<%= stylesheet_link_tag 'opinions' %>
+<head>
 <div class="main-content">
  <%= render 'opinions/side_nav' %>
  <main>
