--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <%= stylesheet_link_tag 'followings' %>
 <%= stylesheet_link_tag 'opinions' %>
 <head>
+
 <div class="main-content">
  <%= render 'opinions/side_nav' %>
  <main>
@@ -9,17 +10,66 @@
   <div class="main-user-body">
     <div class="user-tweet">
       <div class="hero-img">
-      <%=render 'hero' %>
+     <% unless @user[:CoverImage].nil? %>
+   <%= image_tag @user.CoverImage.standard.url, class: 'photo-hero shadow-lg p-3' %>
+<% else %>
+   <img src="https://via.placeholder.com/150" alt="">
+<% end %>
       </div>
       <div class="user-body">
         <p class="user-body-header">ALL TWEETS</p>
-          <%=render 'tweets_like' %>
+        <% @opinions.each do |opinion| %>
+          <div class="user-avatar">
+            <div class="picture">
+              <% if opinion.Author[:Photo].nil? %>
+                <%= gravatar_for opinion.Author, size: 50 %>
+              <% else %>
+                <%= image_tag opinion.Author.Photo.thumb.url %>
+              <% end %>           
+            </div>
+          </div>
+          <div class="user-content">
+            <h4><%= opinion.Author.Fullname.upcase %></h4>
+            <span><%= opinion.Text %></span>
+            <span class="like">
+            <% if opinion.likes.any? { |like| like.UserId == current_user.id }%>
+              <%= link_to unlike_path(opinion), method: :delete, class: 'user' do %>
+                <i class="fas fa-heart text-danger"></i>
+              <% end %>
+            <% else %>
+              <%= link_to like_path(opinion), class: 'user' do %>
+                <i class="fas fa-heart text-white"></i>
+              <% end %>
+            <% end %>
+            <% if opinion.likes.any? %>
+              <p><%= "#{pluralize(opinion.likes.size, 'like')}" %></p>
+            <% end %>
+        </span>
+            <div class="clear"></div>
+          </div>
+        <% end %>
       </div>
     </div>
     <div  class="user-profile">
      <div class="profile-container">
         <div class="d-flex justify-content-center mt-5">
-          <%= render 'followedby' %>
+  <% unless current_user.id == @user.id %>
+    <% if current_user.followed.any? { |person| person.followedId == @user.id }%>
+      <%= link_to unfollow_path(@user), method: :delete, class: "font-unfollow-icon" do %>
+        <i class="fas fa-minus-circle "></i>
+      <% end %>
+    <%else%>
+      <%= link_to follow_path(@user), class: "font-follow-icon" do %>
+        <i class="fas fa-plus-circle "></i>
+      <% end %>
+    <% end %>
+ <% end %>
+<div class="picture ">
+  <% unless @user[:Photo].nil? %>
+    <%= image_tag @user.Photo.medium.url , class: "rounded-circle ml-3 mr-3" %>
+  <% else %>
+    <%= gravatar_for @user, size: 100 %>
+<% end %>
           </div>
           <i class="fas fa-list text-primary pt-2"></i>
         </div>
@@ -53,10 +103,30 @@
           <p>FOLLOWED BY</p>
         </div>
         <div class="my-followers">
-          <%=render 'followers' %>
-          </div>
-      </div>
+  <% @followers.each do |follower| %>
+  <div class="follower-profile">
+    <div class="follower-avatar">
+      <% unless follower.follower[:Photo].nil? %>
+        <%= image_tag follower.follower.Photo.thumb.url %>
+      <% else %>
+        <%= gravatar_for follower.follower, size: 50 %>
+      <% end %>
+      <h6><%= follower.follower.Fullname %></h6>
     </div>
+    <% if current_user.followed.any? { |person| person.followedId == follower.follower.id }%>
+      <%= link_to unfollow_path(follower.follower), method: :delete, class: "follow-icons" do %>
+          <i class="fas fa-minus-circle "></i>
+      <% end %>
+    <%else%>
+      <%= link_to follow_path(follower.follower), class: "follow-icons" do %>
+        <i class="fas fa-plus-circle "></i>
+      <% end %>
+    <% end %>
   </div>
+<% end %>
+  </div>
+</div>
+</div>
+</div>
  </main>
 </div>
