--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -21,7 +21,7 @@
             <% @opinions.each do |opinion| %>
             <div class="tweet-avatar">
                 <div class="picture">
-                <%= pluralized_name_for(opinion) %>
+                <%= author_opinion(opinion) %>
                 </div>
             </div>
             <div class="tweet-content">
@@ -32,20 +32,7 @@
                     <%= sanitize opinion.Text %>
                 </p>
                 <span class="like">
-                    <% if opinion.likes.any? { |like| like.UserId == current_user.id }%>
-                    <%= link_to unlike_path(opinion), method: :delete, class: 'user-1' do %>
-                    <i class="fas fa-heart text-danger"></i>
-                    <% end %>
-                    <% else %>
-                    <%= link_to like_path(opinion), class: 'user-2' do %>
-                    <i class="fas fa-heart "></i>
-                    <% end %>
-                    <% end %>
-                    <% if opinion.likes.any? %>
-                    <p>
-                        <%= "#{pluralize(opinion.likes.size, 'like')}" %>
-                    </p>
-                    <% end %>
+                  <%= like_opinion(opinion) %>
                 </span>
             </div>
             <div class="clear"></div>
