--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 $primary-color-dark: #213246;
 $primary-color: #50a4e2;
 $main-background: #f5f6f8;
@@ -15,7 +14,7 @@ $main-background: #f5f6f8;
 body {
   background: #f5f8fa;
   position: relative;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
 }
 
