--- a/app/views/users/_errors.html.erb
+++ b/app/views/users/_errors.html.erb
@@ -1,13 +1,13 @@
     <% if @user.errors.any? %>
-    <div class="container w-50">
+    <div class="container-fluid">
         <div class="alert alert-danger">
             <div class="panel-heading">
-                <h4>
+                <h4 style="font-size:15px;">
                     <%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h4>
                 <div class="panel-body">
                     <ul>
                         <% @user.errors.full_messages.each do |message| %>
-                        <li>
+                        <li style="font-size:12px">
                             <%= message %>
                         </li>
                         <% end %>
