--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,7 +32,7 @@
         <div class="form-label-group">
             <%= f.submit "sign up",  class: "btn btn-lg btn-primary btn-block btn-color text-uppercase"%>
         </div>
-        <%= link_to "Login In", login_path %>
+        <%= link_to "LogIn", login_path %>
         <% end %>
         </div>
    </div>
