--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,6 +1,6 @@
 <% if notice %>
-	<div class='alert alert-success text-center w-50 container mt-2'>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+	<div class='alert alert-success text-center w-100'>
+        <button type="button" class="close ml-2" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
 		<%= notice %>
@@ -8,10 +8,7 @@
 <% end %>
 
 <% if alert %>
-	<div class='alert alert-danger text-center w-50 container mt-2'>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+	<div class='alert alert-danger text-left w-100'>
 		<%= alert %>
 	</div>
 <% end %>
